sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/ExpressionWithSemicolon.sand
pub class ExpressionWithSemicolon {
    method() {
        foo;
    }
}