sandc/test/fixtures/astRegression/shouldFail/productions/statement/TryMissingCatch.sand
pub class TryMissingCatch {
    foo() {
        try {
            
        }
    }
}